--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kucos",
-  "version": "0.10.2",
+  "version": "0.10.4",
   "description": "Open source comments and kudos server for static websites",
   "private": true,
   "scripts": {
@@ -27,16 +27,20 @@
   },
   "homepage": "https://github.com/skorotkiewicz/kucos#readme",
   "dependencies": {
+    "akismet-api": "^5.0.0",
     "async": "^3.1.0",
     "axios": "^0.19.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "latest",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "i18n": "^0.10.0",
     "moment": "^2.27.0",
     "mongoose": "latest",
     "morgan": "^1.9.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "swig": "^1.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
@@ -57,6 +61,9 @@
     "gulp-string-replace": "^1.1.2",
     "gulp-strip-debug": "^3.0.0",
     "gulp-uglify": "^3.0.2",
-    "gulp-uglify-es": "^2.0.0"
+    "gulp-uglify-es": "^2.0.0",
+    "jest": "^26.1.0",
+    "mocha": "^8.0.1",
+    "supertest": "^4.0.2"
   }
 }
