--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "debug": "latest",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "highlight.js": "^10.1.1",
     "i18n": "^0.10.0",
     "moment": "^2.27.0",
     "mongoose": "latest",
